// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute evidence form needing response, renders correctly 1`] = `
<Page
  className="wcpay-dispute-evidence"
  isNarrow={true}
>
  <Card
    key="general"
    title="General Evidence"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="product_description"
      label="Product Description"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_name"
      label="Customer Name"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_email_address"
      label="Customer Email"
      onChange={[Function]}
      value=""
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      field={
        Object {
          "control": "file",
          "display": "Customer Signature",
          "key": "customer_signature",
        }
      }
      fileName=""
      isDone={false}
      key="customer_signature"
    />
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="billing_address"
      label="Customer Billing Address"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_purchase_ip"
      label="Customer IP Address"
      onChange={[Function]}
      value="127.0.0.1"
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      field={
        Object {
          "control": "file",
          "display": "Receipt",
          "key": "receipt",
        }
      }
      fileName=""
      isDone={false}
      key="receipt"
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      field={
        Object {
          "control": "file",
          "display": "Customer Communication",
          "key": "customer_communication",
        }
      }
      fileName=""
      isDone={false}
      key="customer_communication"
    />
  </Card>
  <Card
    key="uncategorized"
    title="Additional Details"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="uncategorized_text"
      label="Additional Details"
      onChange={[Function]}
      value=""
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      field={
        Object {
          "control": "file",
          "key": "uncategorized_file",
        }
      }
      fileName=""
      isDone={false}
      key="uncategorized_file"
    />
  </Card>
  <Card>
    <p>
      When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
    </p>
    <p>
      <strong>
        Evidence submission is final.
      </strong>
       
      You can also save this evidence for later instead of submitting it immediately.
       
      <strong>
        We will automatically submit any saved evidence at the due date.
      </strong>
    </p>
    <CardFooter>
      <ForwardRef(Button)
        isLarge={true}
        isPrimary={true}
        onClick={[Function]}
      >
        Submit Evidence
      </ForwardRef(Button)>
      <ForwardRef(Button)
        isDefault={true}
        isLarge={true}
        onClick={[Function]}
      >
        Save For Later
      </ForwardRef(Button)>
    </CardFooter>
  </Card>
</Page>
`;

exports[`Dispute evidence form not needing response, renders correctly 1`] = `
<Page
  className="wcpay-dispute-evidence"
  isNarrow={true}
>
  <Card
    key="general"
    title="General Evidence"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="product_description"
      label="Product Description"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_name"
      label="Customer Name"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_email_address"
      label="Customer Email"
      onChange={[Function]}
      value=""
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      field={
        Object {
          "control": "file",
          "display": "Customer Signature",
          "key": "customer_signature",
        }
      }
      fileName=""
      isDone={false}
      key="customer_signature"
    />
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="billing_address"
      label="Customer Billing Address"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_purchase_ip"
      label="Customer IP Address"
      onChange={[Function]}
      value="127.0.0.1"
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      field={
        Object {
          "control": "file",
          "display": "Receipt",
          "key": "receipt",
        }
      }
      fileName=""
      isDone={false}
      key="receipt"
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      field={
        Object {
          "control": "file",
          "display": "Customer Communication",
          "key": "customer_communication",
        }
      }
      fileName=""
      isDone={false}
      key="customer_communication"
    />
  </Card>
  <Card
    key="uncategorized"
    title="Additional Details"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="uncategorized_text"
      label="Additional Details"
      onChange={[Function]}
      value="winning_evidence"
    />
    <FileUploadControl
      accept=".pdf, image/png, image/jpeg"
      field={
        Object {
          "control": "file",
          "key": "uncategorized_file",
        }
      }
      fileName=""
      isDone={false}
      key="uncategorized_file"
    />
  </Card>
  <Card>
    <p>
      When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
    </p>
    <p>
      <strong>
        Evidence submission is final.
      </strong>
       
      You can also save this evidence for later instead of submitting it immediately.
       
      <strong>
        We will automatically submit any saved evidence at the due date.
      </strong>
    </p>
    <CardFooter>
      <ForwardRef(Button)
        isLarge={true}
        isPrimary={true}
        onClick={[Function]}
      >
        Submit Evidence
      </ForwardRef(Button)>
      <ForwardRef(Button)
        isDefault={true}
        isLarge={true}
        onClick={[Function]}
      >
        Save For Later
      </ForwardRef(Button)>
    </CardFooter>
  </Card>
</Page>
`;
